# Pharmacoguard

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: adverse_events.py  ai.py  analytics.py  auth.py  gamification.py  hormone.py  knowledge.py  medications.py  refill.py  safety.py  scheduler.py  users.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/db/: base.py  mongodb.py  redis.py  session.py
backend/app/models/: adverse_event.py  hormone_cycle_log.py  medication.py  user.py
backend/app/schemas/: adverse_event.py  ai.py  analytics.py  gamification.py  hormone.py  knowledge.py  medication.py  safety.py  scheduler.py  user.py
backend/app/services/: analytics_service.py  audio_service.py  ddi_engine.py  groq_service.py  hormone_sync.py  knowledge_service.py  refill_pred.py  scheduler_service.py  streak_service.py  tasks.py
backend/tests/: test_health.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AIAnalysisPage.tsx  AdverseEventsPage.tsx  DashboardPage.tsx  DoctorDashboardPage.tsx  GamificationPage.tsx  HomePage.tsx  HormoneSyncPage.tsx  KnowledgeVaultPage.tsx  LoginPage.tsx  MedicationsPage.tsx  ProfilePage.tsx  ProfileSetupPage.tsx  SchedulerPage.tsx
(+24 files in other folders)
