[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "pharmacoguard-backend"
version = "0.1.0"
description = "PharmacoGuard – AI-powered pharmacovigilance platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "httpx>=0.27,<1",
    "redis>=5.0,<6",
    "celery[redis]>=5.4,<6",
    "motor>=3.6,<4",
    "supabase>=2.0,<3",
    "groq>=0.11,<1",
    "python-multipart>=0.0.9",
    "alembic>=1.13,<2",
    "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
